--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -349,3 +349,90 @@ data_turnout_10 <- data_turnout %>%
 ```
 Among swing states, Minnesota, Colorado, Maine and Wisconsin have the highest turnout rate, and Biden won the majority of votes in those states with high voter turnout rate. 
 
+# Demographics data
+
+```{r, population_trend}
+
+
+population_data<- data %>%
+  filter(total_pop<2500000) 
+  
+plot<- ggplot(population_data,aes(x=total_pop,y=percentage20_joe_biden))+
+  geom_point(alpha=0.5,colour='blue')+
+  xlab('Total population of county') +
+  ylab('Percentage voted for Joe Biden')+
+  labs(title="Biden wins in counties with more people!",
+       subtitle ="Percentage votes to Biden by population in county") +
+  theme_minimal()
+ #ggtitle("Biden wins in counties with more people!")
+
+ggplotly(plot) %>%
+  layout(title = list(text = paste0('Biden wins in counties with more people!',
+                                    '<br>',
+                                    '<sup>',
+                                    'Percentage votes to Biden by population in county',
+                                    '</sup>')))
+
+```
+
+From the above plot, we can appreciate that the as the population of the county increases, the percentage of votes attributed to Joe Biden increased. 
+
+
+```{r, income_trend}
+
+plot_1<- ggplot(data,aes(x=income_per_cap,y=percentage20_joe_biden,color=unemployment))+
+  geom_point(alpha=0.8)+
+  scale_colour_gradientn(colours = terrain.colors(30))+
+  xlab('Income per capita for county') +
+  ylab('Percentage voted for Joe Biden')+
+  theme_minimal()+
+  ggtitle("Did the rich vote for Trump? Not really...")
+
+ggplotly(plot_1) %>%
+  layout(title = list(text = paste0('Did the rich vote for Trump? Not really...',
+                                    '<br>',
+                                    '<sup>',
+                                    'Percentage votes to Biden by income per capita and unemployment ',
+                                    '</sup>')))
+```
+
+
+```{r, race_trend}
+g<-pivot_longer(data,c(black,white),names_to="race",values_to = "percentage")
+
+#plot_2<- ggplot(g,aes(x=percentage,y=percentage20_donald_trump,colour=race))+
+plot_2<- ggplot(g,aes(x=percentage,y=percentage20_donald_trump,colour=race))+
+  theme_minimal()+
+  geom_point(alpha=0.5)+
+  xlab('percentage of race in the county') +
+  ylab('Percentage voted for Donald Trump')+
+  ggtitle("White people vote more for Trump?")
+
+#ggplotly(plot_2)
+plot_2+scale_color_manual(breaks = c("black", "white"),
+                        values=c("blue", "red"))
+```
+
+
+
+```{r, profession_trend}
+
+#z<-pivot_longer(data,c(self_employed,family_work),names_to="profession_type",values_to = "percentage_prof") 
+
+plot_3<- 
+  ggplot(data,aes(x=self_employed,y=percentage20_donald_trump))+
+  theme_minimal()+
+  geom_point(alpha=0.5,colour='red')+
+  #facet_wrap(~ profession_type) +
+  xlab('percentage of self employed people in the county') +
+  ylab('Percentage voted for Donald Trump')+
+  ggtitle("But who did actually vote for Trump?")
+
+ggplotly(plot_3) %>%
+    layout(title = list(text = paste0('But who did actually vote for Trump?',
+                                    '<br>',
+                                    '<sup>',
+                                    'Percentage votes to Trump by self employed percentage in county',
+                                    '</sup>')))
+```
+
