--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -538,3 +538,154 @@ names(top_colors1) <- top_colors$top_states
 
 ```
 Among swing states, Minnesota, Colorado, Maine and Wisconsin have the highest turnout rate, and Biden won the majority of votes in those states with high voter turnout rate. 
+
+```{r turnout, message=FALSE}
+library(here)
+
+turnout_2016<-read.csv(here("data", "2016.csv"))
+turnout_2020<-read.csv(here("data", "2020.csv"))
+turnout_2016<-turnout_2016[3:54, ]
+turnout_2020<-turnout_2020[4:54, ]
+```
+
+```{r datamanip, message=FALSE}
+data1<-data
+turnout_2016_2020<-left_join(turnout_2016, turnout_2020, by = "ï..") %>% 
+  rename(state_name= "ï..") %>% 
+  select(-c(X.1.x, X.1.y)) %>% 
+  filter(state_name !="United States") %>% 
+  mutate(difference= (X.y-X.x)/X.x *100)
+
+
+covid_data<-data1 %>% 
+  group_by(state_name) %>% 
+  summarise(cases= sum(cases),population=sum(total_pop), lat=round(mean(lat), 0), long =round(mean(long), 0)) %>% 
+  mutate(cases_per_1M=round(cases*1000000/population,0)) 
+
+covid_data<-st_drop_geometry(covid_data)
+states <-get_urbn_map("states", sf = TRUE)
+
+turnout_and_covid <- states %>% 
+  left_join(covid_data, by = "state_name") %>% 
+  left_join(turnout_2016_2020, by= "state_name")
+
+```
+
+```{r correlation_creation, message=FALSE}
+library(showtext)
+font_add_google("Courier Prime", "Courier")
+showtext_auto()
+
+st_geometry(circles_data_sf) <- NULL
+
+correlation <-as.data.frame(cor(circles_data_sf[, 10:54], method = "pearson", use = "complete.obs")) %>% 
+  mutate(names = rownames(.)) %>% 
+  arrange(desc(percentage20_joe_biden)) %>% 
+  filter(!names %in% c("votes16_donald_trump","votes16_hillary_clinton","percentage20_donald_trump","total_votes20", "total_votes16","votes20_donald_trump","percentage20_joe_biden", "voting_age_citizen", "votes20_joe_biden","percentage16_hillary_clinton")) %>% 
+  mutate(number= ifelse(names %in% c("black", "asian", "pacific", "native", "hispanic","white"),1, ifelse(names %in% c("total_pop", "employed", "income_per_cap", "poverty"),2, ifelse(names %in% c("professional", "service", "office", "family_work", "production", "self_employed", "construction"), 3, 0)))) %>% 
+  filter(number !=0) %>% 
+  arrange(percentage20_joe_biden) %>% 
+  arrange(desc(number))%>% 
+  mutate(no=row_number())
+
+correlation1<-correlation %>% 
+  filter(number ==1) 
+correlation2<-correlation %>% 
+  filter(number ==2) 
+correlation3<-correlation %>% 
+  filter(number ==3) 
+  
+```
+
+```{r plot corrr, message=FALSE}
+cor1<-ggplot(correlation1, aes(x=reorder(names, no), y=percentage20_joe_biden, label=round(percentage20_joe_biden,2))) + 
+  geom_point(stat='identity', aes(col=percentage20_joe_biden), size=9)  +
+  scale_color_gradient2("",low = muted("#CB454A"),mid = "white", high = muted("#2E74C0"), midpoint=0, breaks=c(-0.5,0,0.45), labels=c("More Trump",0,"More Biden"))+ 
+  geom_text(color="black", size=2) +
+  ylim(-0.6, 0.6) +
+  theme_minimal()+  
+  theme(panel.grid.major.x= element_blank(), 
+         panel.grid.minor.x = element_blank(),
+         panel.background = element_blank(),
+         #panel.grid.x=element_blank(), 
+         legend.position="bottom",
+         axis.ticks=element_blank(),
+        text=element_text(size=12, family="Courier"), 
+        plot.title = element_text(color=muted("#CB454A"), face = "bold"))+
+  labs(title="Blacks & Asians Voted J.Biden, People Working in Construction or Production Did Not", subtitle= "Correlation between Demographics and Votes for J.Biden", x="Ethnicity",y= "",fill="")+
+  theme(plot.title = element_text(size=13), 
+        plot.subtitle=element_text(size=12.5), 
+        plot.caption = element_text(size=6))+
+  coord_flip()
+
+cor2<-ggplot(correlation2, aes(x=reorder(names, no), y=percentage20_joe_biden, label=round(percentage20_joe_biden,2))) + 
+  geom_point(stat='identity', aes(col=percentage20_joe_biden), size=9)  +
+  scale_color_gradient2("",low = muted("#CB454A"),mid = "white", high = muted("#2E74C0"), midpoint=0, breaks=c(-0.5,0,0.45), labels=c("More Trump",0,"More Biden"))+ 
+  geom_text(color="black", size=2) +
+  ylim(-0.6, 0.6) +
+  coord_flip()+
+  theme_minimal()+  
+  theme(panel.grid.major.x= element_blank(), 
+         panel.grid.minor.x = element_blank(),
+         panel.background = element_blank(),
+         #panel.grid.x=element_blank(), 
+         legend.position="bottom",
+         axis.ticks=element_blank(),
+         text=element_text(size=12, family="Courier"))+
+  labs(y=NULL, x="Economy", fill="")
+
+cor3<-ggplot(correlation3, aes(x=reorder(names, no), y=percentage20_joe_biden, label=round(percentage20_joe_biden,2))) + 
+  geom_point(stat='identity', aes(col=percentage20_joe_biden), size=9)  +
+  scale_color_gradient2("",low = muted("#CB454A"),mid = "white", high = muted("#2E74C0"), midpoint=0, breaks=c(-0.5,0,0.45), labels=c("More Trump",0,"More Biden"))+ 
+  geom_text(color="black", size=2) +
+  ylim(-0.6, 0.6) +
+  coord_flip()+
+  theme_minimal()+  
+  theme(panel.grid.major.x= element_blank(), 
+         panel.grid.minor.x = element_blank(),
+         panel.background = element_blank(),
+         #panel.grid.x=element_blank(), 
+         #legend.position="bottom",
+         axis.ticks=element_blank(),
+         text=element_text(size=12, family="Courier"))+
+  labs(y="Correlation with % Votes Joe Biden", x="Job division", fill="")
+  
+library(ggpubr)
+library(gridExtra)
+#grid.arrange(cor1, cor2, cor3, nrow = 3)
+ggarrange(cor1, cor2,cor3, ncol=1, nrow=3, align="hv", common.legend = TRUE, legend= "right", widths = c(15,1))
+
+```
+```{r plotcov, message=FALSE}
+
+library(gghighlight)
+tcov_points%>%
+  mutate(hey=ifelse(cases_per_1M>45000,1,0)) %>% 
+  ggplot(aes(x=cases_per_1M,y= X.y)) + 
+  geom_point(aes(label=state_abbv))+
+  geom_smooth(method= "lm", se=FALSE, color=muted("#CB454A"))+
+  #geom_segment(mapping=aes(x=10000, y=77, xend=40000, yend=57), arrow=arrow(), size=1, color=muted("#CB454A"))+
+  theme_minimal()+
+  #geom_text_repel(aes(label=state_abbv))+
+  labs(x="Coronavirus Cases per 1M", y= "Turnout Rate per State", title= "More Covid less Votes!", subtitle="States' Turnout Rates and Level of Covid per 1 Million People")+
+  theme(text=element_text(size=10, family="Courier"), 
+        plot.title = element_text(color=muted("#CB454A"), face = "bold"))
+  
+```
+
+```{r state_turnout}
+library(statebins)
+library(extrafont)
+
+statebins(state_data = turnout_and_covid, state_col = "state_name",
+                  value_col = "difference",font_size = 3)+
+  scale_fill_continuous(trans = 'reverse')+
+   theme(panel.grid.major = element_blank(), 
+         panel.grid.minor = element_blank(),
+         panel.background = element_blank(),
+         panel.grid=element_blank(), 
+         legend.position="bottom",
+         axis.ticks=element_blank())+
+  theme_void()+
+  labs(title="Improvement in turnout Rate 2016-2020")
+```
